--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "mysql-server"]
 	path = mysql-server
 	url = https://github.com/mysql/mysql-server.git
+[submodule "boost"]
+	path = boost
+	url = https://github.com/boostorg/boost.git
